<resources>
    <string name="app_name" translatable="false">PlanIt</string>
    <string name="app_subtitle" translatable="false">Your Tasks, simplified</string>
    <string name="email_and_password">Email and password</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="Google">Sign in with Google</string>
    <string name="login">Log in</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login_successful">Login successful</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name\t</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="signup_successful">Sign up successful</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="days_remaining">Days remaining:</string>
    <string name="about">About...</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="text_logout">Log out successful</string>
    <string name="it_new">New task</string>
    <string name="it_prioritary">Prioritary</string>
    <string name="it_logout">Log out</string>
    <string name="desc_it_new">Create new task</string>
    <string name="desc_it_prioritary">Filter priority</string>
    <string name="exit">Exit</string>
    <string name="title">Title</string>
    <string name="due_date">Due date</string>
    <string name="progress">Progress</string>
    <string name="description_detail">Describe the task in detail</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="task_saved_successfully">Task saved successfully!</string>
    <string name="failed_to_add_task_to_database">Failed to add task to database</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="due_date_cannot_be_empty">Date cannot be empty</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_cannot_be_empty">Date cannot be empty</string>
    <string name="user_error">No logged in user</string>
    <string name="deleted_task">Task deleted</string>
    <string name="error_deleting_task">Error deleting task</string>
    <string name="invalid_task">Invalid task</string>
    <string name="edit_task">Edit task</string>
    <string name="default_web_client_id" translatable="false">936075700566-ghmb2u2qoal0oe37ij1rcg5vfthnmvpn.apps.googleusercontent.com</string>
    <string name="it_completed">Completed task</string>
    <string name="desc_it_completed">Filter completed tasks</string>
    <string name="confirm_logout">Do you really want to log out?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="confirm_exit">Do you really want to quit?</string>
    <string name="confirm_delete_title">Delete task</string>
    <string name="confirm_delete_message">Are you sure you want to delete this task? This action cannot be undone.</string>


</resources>