<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_icon"
        android:orderInCategory="100">
        <item
            android:id="@+id/it_new"
            android:contentDescription="@string/desc_it_new"
            android:icon="@drawable/icon_new"
            android:orderInCategory="110"
            android:title="@string/it_new"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/it_prioritary"
            android:contentDescription="@string/desc_it_prioritary"
            android:icon="@android:drawable/btn_star_big_on"
            android:orderInCategory="120"
            android:title="@string/it_prioritary"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/group_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <item
            android:id="@+id/it_about"
            android:title="@string/about" />
        <item
            android:id="@+id/it_logout"
            android:title="@string/it_logout" />
        <item
            android:id="@+id/it_exit"
            android:title="@string/exit" />
    </group>
</menu>