<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskListMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_activity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="@string/app_subtitle" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/my_light_primary"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="24dp"
                tools:ignore="UseCompoundDrawables">

                <ImageButton
                    android:id="@+id/ibMail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@color/my_light_primary"
                    android:contentDescription="@string/email_and_password"
                    android:src="@drawable/mail_white"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/tvMail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/email_and_password"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="@string/email_and_password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="24dp"
                tools:ignore="UseCompoundDrawables">

                <ImageButton
                    android:id="@+id/ibSignInWithGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@drawable/googleg_standard_color_18"
                    android:contentDescription="@string/Google"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/tvSignInGoogle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/Google"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="@string/Google" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvSignUpMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/not_yet_registered_sign_up"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>